[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.5
height = 1.0
radial_segments = 32
rings = 16

[node name="Root" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.961262, 0.275637, 0, -0.275637, 0.961262, 0, 6, 7 )
fov = 30.0

[node name="RoomManager" type="RoomManager" parent="."]
roomlist = NodePath("../RoomList")

[node name="RoomList" type="Spatial" parent="."]

[node name="MainRoom" type="Room" parent="RoomList"]
points = PoolVector3Array( -10, -1, -10, 10, -1, -10, -10, 9, -10, 10, 9, -10, -10, -1, 10, 10, -1, 10, -10, 9, 10, 10, 9, 10 )

[node name="CSGBox" type="CSGBox" parent="RoomList/MainRoom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
width = 20.0
height = 10.0
depth = 20.0

[node name="CSGBox" type="CSGBox" parent="RoomList/MainRoom/CSGBox"]
operation = 2
width = 18.0
height = 8.0
depth = 18.0

[node name="ParentA" type="Spatial" parent="RoomList/MainRoom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )

[node name="Ball" type="MeshInstance" parent="RoomList/MainRoom/ParentA"]
portal_mode = 2
mesh = SubResource( 2 )
material/0 = null

[node name="ParentB" type="Spatial" parent="RoomList/MainRoom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
custom_constants/separation = 32

[node name="Instructions" type="Label" parent="VBoxContainer"]
margin_right = 404.0
margin_bottom = 116.0
text = "Instructions:
- Press Space to reparent the ball
- Press BackSpace to toggle the portal system

Results:
- When portals are ON, the ball disappears after pressing Space
- When portals are OFF, the ball never disappears"

[node name="PortalLabel" type="Label" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 404.0
margin_bottom = 162.0
